feat(education): create education feature in admin, web and api
