# apps/api/src/app/education/dto/public-education.dto.ts
@@ -1,0 +1,10 @@
+import { ApiPropertyOptional, OmitType } from '@nestjs/swagger';
+import { EducationDto } from './education.dto';
+
+export class PublicEducationDto extends OmitType(EducationDto, ['descriptionEn', 'descriptionNl'] as const) {
+  @ApiPropertyOptional()
+  description?: string;
+
+  @ApiPropertyOptional()
+  descriptionHtml?: string;
+}
